--- a/css_reset/assets/advanced_selectors.css
+++ b/css_reset/assets/advanced_selectors.css
@@ -47,7 +47,7 @@ input[type="radio"] {
     -webkit-appearance: none;
     width: 27px;
     height: 27px;
-    background-image: url(../assets/stars.png);
+    background-image: url(./stars.png);
     vertical-align: bottom;
 }
 
@@ -71,58 +71,3 @@ ol li:nth-of-type(2n) {
 h2 + .user_review {
     border-top: 1px solid black;
 }
-
-nav li{
-  display: inline-block;
-}
-
-a {
-  display: block;
-}
-
-figcaption a{
-  padding: 20px;
-}
-
-nav {
-  display: inline-block;
-}
-
-body {
-  width: 900px;
-  margin: 0 auto;
-}
-
-body main{
-  width: 700px;
-}
-
-body aside{
-  width: 180px;
-  margin-right: 15px;
-}
-
-body section{      /* Can't seem to put section next to aside*/
-  display: inline-block;
-}
-
-aside li,ol li {
-  margin-top: 15px;
-  margin-bottom: 15px;
-}
-
-input {
-  display: flex;
-}
-
-select {
-  margin: 100px;
-}
-
-input text,select,textarea{
-  width: 300px;
-}
-
-
-
-
